--- a/toDo.css
+++ b/toDo.css
@@ -4,53 +4,55 @@ body {
   font-size: 16px;
   margin-left: 40px;
   margin-right: 40px;
-  margin-top: 40px;
+  margin-top: 40px; 
+  padding: 40px; 
+  border-radius: 10px;
+  border-color: #fff;
 }
 
-.encabezado {
-  margin-left: 500px;
-  width: 300px;
-  height: 50px;
+
+  
 }
 
 .containerPrincipal {
-  background: #f44336;
-  border-top: 20px solid #d32f2f;
+  background: #aa635d;
+  border-top: 20px solid #897d7d;
   color: #fff;
-  padding: 30px 0;
-  width: 100%;
+  padding: 30px;
+  width: 95%; 
+  
 }
 
-.formulario {
-  color: #934848;
-  text-align: center;
-}
 
-.containerPrincipal.formulario input[type="text"] {
-  margin-bottom: 60px;
-  padding: 10px;
-  width: 100%;
-}
-
-.containerPrincipal .formulario input[type="text"].error {
-  border: 10px solid #ce6262;
-  color: rgb(150, 132, 132);
-}
-
-.containerPrincipal .formulario .boton {
-  background: none;
-  border: 1px solid #947979;
-  color: #fff;
-  display: inline-block;
-  font-size: 16px;
-  padding: 15px;
-}
-
-.containerPrincipal .formulario .boton:hover {
-  border: 1px solid #fff;
-}
 
 h1 {
   font-size: x-large;
   font-family: Georgia, "Times New Roman", Times, serif;
+}
+#sincirculo{
+    list-style: none;
+} 
+.boton{
+   background-color: rgb(194, 180, 164); 
+   width: 150px;
+   height: 20px; 
+   margin-right: 300px; 
+   margin-top: 10px;
+} 
+#tareaInput{
+    background-color: whitesmoke 
+    width: 150px;
+   height: 20px; 
+   
+    
+} 
+#cuadro2{
+    margin-left: 50px;
+    margin-right: 50px; 
+    padding: 50px;
+    border-radius: 0%;
+
+} 
+.circle{
+    list-style: circle;
 }
