--- a/toDo.css
+++ b/toDo.css
@@ -1,29 +1,16 @@
 body {
-  background: #cba4a4;
+  background: whitesmoke;
   font-family: arial, helvetica, sans-serif;
-  font-size: 16px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-top: 40px; 
-  padding: 40px; 
-  border-radius: 10px;
-  border-color: #fff;
-}
-
-
-  
+  border-color: #e4e1e1;
+  width: 50%;
+  margin: auto;
+  margin-top: 100px;
 }
 
 .containerPrincipal {
-  background: #aa635d;
-  border-top: 20px solid #897d7d;
-  color: #fff;
-  padding: 30px;
-  width: 95%; 
+  background: whitesmoke;
   
 }
-
-
 
 h1 {
   font-size: x-large;
@@ -33,19 +20,13 @@ h1 {
     list-style: none;
 } 
 .boton{
-   background-color: rgb(194, 180, 164); 
+   background-color: rgb(76, 135, 184); 
    width: 150px;
    height: 20px; 
    margin-right: 300px; 
    margin-top: 10px;
 } 
-#tareaInput{
-    background-color: whitesmoke 
-    width: 150px;
-   height: 20px; 
-   
-    
-} 
+
 #cuadro2{
     margin-left: 50px;
     margin-right: 50px; 
@@ -53,6 +34,7 @@ h1 {
     border-radius: 0%;
 
 } 
-.circle{
-    list-style: circle;
+
+.container{
+  display: flex;
 }
